--- a/Winter 20/271B/HW1/hw1.tex
+++ b/Winter 20/271B/HW1/hw1.tex
@@ -148,4 +148,64 @@ for $B_t$ standard Brownian motion. Find $\zeta$ so that $X_n$ is stationary in 
 	\]
 \end{solution}
 
+\noindent\textbf{Problem 3. }
+Consider
+\[
+X_t = \int_0^t(t-s)^{H-1/2}dB_s,
+\]
+for $B_t$ standard Brownian motion. For which values of $H$ is $X_t$ well defined? Find the distribution of $X_t$. Compare with the distribution of fractional Brownian motion $B^H_t$.
+\begin{solution}
+	The family $(t-s)^{H-1/2}$ is continuous and adapted, and hence progressively measurable. We also have
+	\[
+	\E\left[\int_0^t(t-s)^{2H-1}\ ds\right] = \int_0^t(t-s)^{2H-1}\ ds < \infty \iff H>0.
+	\]
+	Consequently, $X_t$ is well defined for $H>0$. The family $f^{(t)}_s = (t-s)^{H-1/2}$ is uniformly $\Prob$-integrable, so we have
+	\begin{align*}
+	X_t &= \int_0^t(t-s)^{H-1/2}\ dB_s= \lim_{\Delta t\to 0}\sum_{k=1}^{t/\Delta t}f^{(t)}_{t_i}\Delta B_{t_{i+1}},
+	\end{align*}
+	where $t_i = i\Delta t$, and $\Delta B_{t_{i+1}} = B_{t_{i+1}}-B_{t_i}$. Now for any fixed $t$, the values $f^{(t)}_{t_i}$ are deterministic constants. The increments $\Delta B_{t_{i+1}}$ are independent Gaussians, so the above sum is a limit (in some sense) of Gaussians. We'll show that the above sum weakly converges to a Gaussian by showing that its mean and variance converge.\\
+
+	\noindent The increment $\Delta B_{t_{i+1}}$ has mean zero, so for any $\Delta t>0$, the above sum has mean zero. As the increments are independent and have variance $\Delta t$, the variance of the sum is given by
+	\[
+	\sigma_{\Delta t}^2 = \sum_{k=1}^{t/\Delta t}\left(f_{t_i}^{(t)}\right)^2\Delta t,
+	\]
+	which we recognize as a Riemann sum that converges to $\int_0^t(f^{(t)})^2\ ds$. We conclude that
+	\[
+	X_t \sim \mcal{N}\left(0, \int_0^t(t-s)^{2H-1}\ ds\right) = \mcal{N}\left(0, \frac{t^{2H}}{2H}\right).
+	\]
+	This almost has the same distribution as fractional Brownian motion, which satisfies
+	\[
+	B^H_t\sim \mcal{N}(0, t^{2H}).
+	\]
+\end{solution}
+
+\noindent\textbf{Problem 4. }
+Prove directly from the definition of It\^o integrals the integration by parts relation:
+\[
+\int_0^ts\ dB_s = tB_t - \int_0^tB_s\ ds.
+\]
+\begin{proof}
+	Since the function $(s, \omega)\mapsto s$ is deterministic, it is adapted and uniformly integrable, so we have by summation by parts
+	\begin{align*}
+		\int_0^t s\ dB_s&= \lim_{\Delta t\to 0}\sum_{k=1}^{t/\Delta t}t_i(B_{t_{i+1}}-B_{t_i})\\
+		&= \lim_{\Delta t\to 0}\left[t_{t/\Delta t}(B_{t_{t/\Delta t}}-B_0) - \sum_{k=1}^{t/\Delta t}B_{t_i}(t_{i+1}-t_i)\right]\\
+		&= \lim_{\Delta t\to 0}\left[tB_t - \sum_{k=1}^{t/\Delta t}B_{t_i}\Delta t\right]\\
+		&= tB_t - \int_0^tB_s\ ds.
+	\end{align*}
+\end{proof}
+
+\noindent\textbf{Problem 5. }
+Prove directly form the definition of the It\^o integral that
+\[
+\int_0^tB_s^2\ dB_s = \frac{1}{3}B_t^3 - \int_0^tB_s\ ds.
+\]
+\begin{proof}
+	The family of functions $\{B_s^2\}_{s\leq t}$ is uniformly $\Prob$-integrable since $\E[B_s^2] = s$. We then have by summation by parts
+	\begin{align*}
+		\int_0^tB_s^2\ dB_s &= \lim_{\Delta t\to 0}\sum_{k=1}^{t/\Delta t}B_{t_i}^2(B_{t_i+1}-B_{t_i})\\
+		&= \lim_{\Delta t\to 0}\left[B_t^2]
+	\end{align*}
+\end{proof}
+
+
 \end{document}
